<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <TextView
        android:id="@+id/title_tutorial"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="Tutorial"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:elevation="5dp"
        android:background="@color/purple_700"
        />

    <ScrollView
        android:id="@+id/scroll_view_tuto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/tv_tuto_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/first_txt"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:paddingTop="5dp"
                android:padding="15dp"
                />

            <ImageView
                android:id="@+id/imageView_tuto_first"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/logo_large"
                app:layout_constraintTop_toBottomOf="@id/tv_tuto_first"
                />

            <TextView
                android:id="@+id/tv_tuto_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageView_tuto_first"
                android:text="@string/second_txt"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="15dp"
                android:paddingVertical="20dp"
                />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/imageView_tuto_second"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toBottomOf="@id/tv_tuto_second"
                android:src="@drawable/image_tuto"
                />

            <TextView
                android:id="@+id/tv_tuto_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageView_tuto_second"
                android:text="@string/third_txt"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="15dp"
                android:paddingVertical="20dp"
                />

            <ImageView
                android:id="@+id/imageView_tuto_third"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toBottomOf="@id/tv_tuto_third"
                android:src="@drawable/leaderboard_tuto"
                />

            <TextView
                android:id="@+id/tv_tuto_fourth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageView_tuto_third"
                android:text="@string/fourth"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="15dp"
                android:paddingVertical="20dp"
                />

            <ImageView
                android:id="@+id/imageView_tuto_fourth"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toBottomOf="@id/tv_tuto_fourth"
                android:src="@drawable/achievement_tuto"
                />

            <TextView
                android:id="@+id/tv_tuto_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/imageView_tuto_fourth"
                android:text="@string/five"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="15dp"
                android:paddingVertical="20dp"
                />

            <Button
                android:id="@+id/end_tuto_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start !"
                android:backgroundTint="@color/button"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_tuto_five"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>